--- a/res/layout/container_main_menu.xml
+++ b/res/layout/container_main_menu.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/container_main_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.worldcarquiz.MainActivity"
+    tools:context="com.android.worldcarquiz.activity.MainMenuActivity"
     tools:ignore="MergeRootFrame" />
 
