--- a/res/layout/fragment_main_menu.xml
+++ b/res/layout/fragment_main_menu.xml
@@ -1,18 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/shapes"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.android.worldcarquiz.activity.MainActivity$PlaceholderFragment" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/shapes" >
 
-    <LinearLayout
+    <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        
         android:orientation="vertical" >
 
         <TextView
@@ -21,63 +17,103 @@
             android:layout_height="wrap_content"
             android:text="@string/world_quiz"
             android:textColor="#ffffff"
-            android:textSize="30sp"
-            android:fontFamily="Roboto"         
+            android:textSize="35sp"     
              />
         
         <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="left"
-        android:orientation="horizontal" >
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="horizontal" >
+
+        	<ImageView 
+		        android:id="@+id/ic_action_split"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/ic_action_split" />
 	        <TextView
 	            android:id="@+id/cars"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="@string/cars"
 	            android:textColor="#ffffff"
-	            android:textSize="15sp"
-	            android:fontFamily="Roboto"         
+	            android:textSize="18sp"        
 	             />
 	        
          </LinearLayout>
         <Button 
-            android:id="@+id/play_main_menu_button"
+            android:id="@+id/play_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_shape"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginTop="20dp"
+            android:textSize="20sp"
             android:text="@string/play"
             android:textColor="#ffffff"
-            android:fontFamily="Roboto" 
             />
         <Button 
-            android:id="@+id/worlds_main_menu_button"
+            android:id="@+id/worlds_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_shape"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
+            android:textSize="20sp"
             android:text="@string/worlds"
             android:textColor="#ffffff"
-            android:fontFamily="Roboto" 
             />
         <Button 
-            android:id="@+id/tutorial_main_menu_button"
+            android:id="@+id/tutorial_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_shape"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginTop="20dp"
+            android:textSize="20sp"
             android:text="@string/tutorial"
             android:textColor="#ffffff"
-            android:fontFamily="Roboto" 
             />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            
+            android:orientation="horizontal" >
+	        
+            <ImageButton 
+	            android:id="@+id/stats_main_circle_button"
+	            android:layout_marginTop="18dp"
+	            android:layout_width="55sp"
+				android:layout_height="55sp"
+				android:src="@drawable/ic_action_split"
+	            android:background="@drawable/button_circle_shape"/>
+            <ImageButton 
+	            android:id="@+id/awards_main_circle_button"
+	            android:layout_marginTop="18dp"
+	            android:layout_marginRight="30dp"
+	            android:layout_marginLeft="30dp"
+	            android:layout_width="55sp"
+				android:layout_height="55sp"
+	            android:background="@drawable/button_circle_shape"/>
+            <ImageButton 
+	            android:id="@+id/stamps_main_circle_button"
+	            android:layout_marginTop="18dp"
+	            android:layout_width="55sp"
+				android:layout_height="55sp"
+	            android:background="@drawable/button_circle_shape"/>
+        
+         </LinearLayout>
+
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="true"
+        android:src="@drawable/fondo" />
 
 </RelativeLayout>
