--- a/res/layout/fragment_main_menu.xml
+++ b/res/layout/fragment_main_menu.xml
@@ -7,6 +7,7 @@
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"
         android:gravity="center"
         
         android:orientation="vertical" >
@@ -113,8 +114,9 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+      	android:layout_width="wrap_content"
+      	android:layout_height="wrap_content"
+      	android:layout_alignParentBottom="true"
         android:src="@drawable/fondo" />
 
 </RelativeLayout>
