--- a/res/layout/fragment_main_menu.xml
+++ b/res/layout/fragment_main_menu.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/shapes" >
 
     <LinearLayout 
@@ -117,6 +117,7 @@
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_alignParentBottom="true"
+      	android:scaleType="centerInside"
         android:src="@drawable/fondo" />
 
 </RelativeLayout>
