Cambio de color de botones y al presionarlos
Los circulos se convierten en cuadrados al pulsar, mira a ver si te mola
o lo cambiamos.

--- a/res/drawable-mdpi/button_presset_shape.xml
+++ b/res/drawable-mdpi/button_presset_shape.xml
@@ -11,6 +11,6 @@
         android:bottom="10dp"/>
     
     <solid 
-        android:color="#33B5E5"/>
+        android:color="#0099CC"/>
     
 </shape>
