--- a/res/layout/fragment_main_menu.xml
+++ b/res/layout/fragment_main_menu.xml
@@ -48,7 +48,7 @@
             android:id="@+id/play_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
+            android:background="@drawable/button_selector"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginTop="20dp"
@@ -60,7 +60,7 @@
             android:id="@+id/worlds_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
+            android:background="@drawable/button_selector"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
@@ -72,7 +72,7 @@
             android:id="@+id/tutorial_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
+            android:background="@drawable/button_selector"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginTop="20dp"
@@ -93,7 +93,7 @@
 	            android:layout_width="52sp"
 				android:layout_height="52sp"
 				android:src="@drawable/ic_action_network_cell"
-	            android:background="@drawable/button_circle_shape"/>
+	            android:background="@drawable/button_circle_selector"/>
             <ImageButton 
 	            android:id="@+id/awards_main_circle_button"
 	            android:layout_marginTop="18dp"
@@ -102,14 +102,14 @@
 	            android:layout_width="52sp"
 				android:layout_height="52sp"
 				android:src="@drawable/ic_action_important"
-	            android:background="@drawable/button_circle_shape"/>
+	            android:background="@drawable/button_circle_selector"/>
             <ImageButton 
 	            android:id="@+id/stamps_main_circle_button"
 	            android:layout_marginTop="18dp"
 	            android:layout_width="52sp"
 				android:layout_height="52sp"
 				android:src="@drawable/ic_action_favorite"
-	            android:background="@drawable/button_circle_shape"/>
+	            android:background="@drawable/button_circle_selector"/>
         
          </LinearLayout>
 
