Empezando con lista de mundos

--- a/res/layout/container_list_worlds.xml
+++ b/res/layout/container_list_worlds.xml
@@ -3,5 +3,6 @@
     android:id="@+id/container_list_worlds"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/shapes" >
 </LinearLayout>
