--- a/res/layout/list_worlds_fragment.xml
+++ b/res/layout/list_worlds_fragment.xml
@@ -4,18 +4,21 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
     
-    <ImageView 
-        android:id="@+id/image_list_worlds"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="#9933CC"
-        android:contentDescription="Imagen mundos"/>
+    <Button 
+		android:id="@+id/image_list_worlds"
+	    android:layout_marginTop="18dp"
+	    android:layout_width="80dp"
+		android:layout_height="80dp"	
+		android:layout_marginLeft="20dp"	
+	    android:background="@drawable/button_circle_selector"/>
+    
+
     
 	<TextView
 	    android:id="@+id/text_list_worlds"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:textSize="30sp"
+	    android:textSize="20sp"
 	    android:gravity="center_horizontal|center_vertical"
 	    android:text="World"/>
 	    
