Cambio de texto prueba comprometer

--- a/res/layout/list_worlds_fragment.xml
+++ b/res/layout/list_worlds_fragment.xml
@@ -20,6 +20,6 @@
 	    android:layout_height="match_parent"
 	    android:textSize="20sp"
 	    android:gravity="center_horizontal|center_vertical"
-	    android:text="World"/>
+	    android:text="22 out of 24 Cars"/>
 	    
 </LinearLayout>
