Con nuestros botones
Lo suyo es que no tengan borde...o ponerles un margin para que se
separen un poco no?

--- a/res/layout/question_option_one_fragment.xml
+++ b/res/layout/question_option_one_fragment.xml
@@ -26,6 +26,7 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.33"
+		            android:background="@drawable/button_selector"
 		            android:src="@drawable/ic_action_network_cell" />
 
 		        <ImageButton
@@ -34,6 +35,7 @@
 		            android:layout_height="wrap_content"
 		            android:layout_above="@+id/image_car_question"
 		            android:layout_weight="0.33"
+		             android:background="@drawable/button_selector"
 		            android:src="@drawable/ic_action_network_cell" />
 
 		        <ImageButton
@@ -42,6 +44,7 @@
 		            android:layout_height="wrap_content"
 		            android:layout_above="@+id/image_car_question"
 		            android:layout_weight="0.33"
+		             android:background="@drawable/button_selector"
 		            android:src="@drawable/ic_action_network_cell" />
 		    </LinearLayout>
            
