--- a/res/layout/question_option_one_fragment.xml
+++ b/res/layout/question_option_one_fragment.xml
@@ -26,8 +26,9 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.33"
+		            android:layout_margin="2dp"
 		            android:background="@drawable/button_selector"
-		            android:src="@drawable/ic_action_network_cell" />
+		            android:src="@drawable/ic_action_share" />
 
 		        <ImageButton
 		            android:id="@+id/help_button"
@@ -35,8 +36,9 @@
 		            android:layout_height="wrap_content"
 		            android:layout_above="@+id/image_car_question"
 		            android:layout_weight="0.33"
+		            android:layout_margin="2dp"
 		             android:background="@drawable/button_selector"
-		            android:src="@drawable/ic_action_network_cell" />
+		            android:src="@drawable/ic_action_help" />
 
 		        <ImageButton
 		            android:id="@+id/help_button"
@@ -44,8 +46,9 @@
 		            android:layout_height="wrap_content"
 		            android:layout_above="@+id/image_car_question"
 		            android:layout_weight="0.33"
-		             android:background="@drawable/button_selector"
-		            android:src="@drawable/ic_action_network_cell" />
+		            android:layout_margin="2dp"
+		            android:background="@drawable/button_selector"
+		            android:src="@drawable/ic_action_download" />
 		    </LinearLayout>
            
 
