--- a/res/layout/question_option_one_fragment.xml
+++ b/res/layout/question_option_one_fragment.xml
@@ -4,7 +4,6 @@
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/shapes" >
-    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
@@ -15,44 +14,130 @@
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:scaleType="fitXY"
-               android:layout_weight="0.33"
+               android:layout_weight="0.85"
                android:src="@drawable/car1"/>
+         <!-- Botones de ayuda -->
        	 <LinearLayout
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content" >
-
 		        <ImageButton
 		            android:id="@+id/share_button"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.33"
-		            android:layout_margin="2dp"
+		            android:layout_marginTop="2dp"
+		            android:layout_marginLeft="1dp"
+		            android:layout_marginRight="2dp"
 		            android:background="@drawable/button_selector"
 		            android:src="@drawable/ic_action_share" />
-
 		        <ImageButton
 		            android:id="@+id/help_button"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:layout_above="@+id/image_car_question"
 		            android:layout_weight="0.33"
-		            android:layout_margin="2dp"
+		            android:layout_marginTop="2dp"
+		            android:layout_marginLeft="1dp"
+		            android:layout_marginRight="1dp"
 		             android:background="@drawable/button_selector"
 		            android:src="@drawable/ic_action_help" />
-
 		        <ImageButton
 		            android:id="@+id/help_button"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:layout_above="@+id/image_car_question"
 		            android:layout_weight="0.33"
-		            android:layout_margin="2dp"
+		            android:layout_marginTop="2dp"
+		            android:layout_marginLeft="1dp"
+		            android:layout_marginRight="2dp"
 		            android:background="@drawable/button_selector"
 		            android:src="@drawable/ic_action_download" />
 		    </LinearLayout>
-           
+		    
+       	 <!-- Texto correcto/incorrecto -->
+       	 <TextView
+            android:id="@+id/correct_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="VarCorrecto!"
+            android:textColor="#99CC00"
+            android:textSize="30sp"     
+             />
+       	 <TextView
+            android:id="@+id/get_points_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="Has conseguido varLitros"
+            android:textColor="#ffffff"
+            android:textSize="15sp"     
+             />
+		     <Button
+		            android:id="@+id/next_car"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:layout_marginTop="12dp"
+		            android:layout_marginLeft="80dp"
+		            android:layout_marginRight="80dp"
+		            android:textColor="#ffffff"
+            		android:textSize="15sp"     
+					android:gravity="center"
+		            android:text="@string/next_car"
+		            android:background="@drawable/button_selector"
+		             />     
+       	 
+       	 <!-- Botones Respuestas -->
+       	 	 <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content">
+		        <Button
+		            android:id="@+id/solution_one"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_weight="0.5"
+		            android:layout_marginTop="25dp"
+		            android:layout_marginLeft="10dp"
+		            android:layout_marginRight="5dp"
+		            android:background="@drawable/button_selector"
+		             />
+		        <Button
+		            android:id="@+id/solution_two"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_weight="0.5"
+		            android:layout_marginTop="25dp"
+		            android:layout_marginLeft="5dp"
+		            android:layout_marginRight="10dp"
+		             android:background="@drawable/button_selector"
+		             />
+		    </LinearLayout>
+       	 	 <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content" >
+		        <Button
+		            android:id="@+id/solution_three"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_weight="0.5"
+		            android:layout_marginTop="20dp"
+		            android:layout_marginLeft="10dp"
+		            android:layout_marginRight="5dp"
+		            android:background="@drawable/button_selector"
+		             />
+		        <Button
+		            android:id="@+id/solution_four"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_weight="0.5"
+		            android:layout_marginTop="20dp"
+		            android:layout_marginLeft="5dp"
+		            android:layout_marginRight="10dp"
+		            android:background="@drawable/button_selector"
+		            />
+		    </LinearLayout>
 
-                            
-   </LinearLayout>
+		    
 
+  	</LinearLayout>
 </RelativeLayout>
