Modificaciones pa que funcione

--- a/res/layout/container_question.xml
+++ b/res/layout/container_question.xml
@@ -9,7 +9,8 @@
     <FrameLayout 
         android:id="@+id/fragment_photo"
     	android:layout_width="match_parent"
-    	android:layout_height="match_parent"/>
+    	android:layout_height="wrap_content"
+    	android:layout_weight="0.33"/>
     
     <FrameLayout 
         android:id="@+id/fragment_result"
