--- a/res/layout/fragment_photo_question.xml
+++ b/res/layout/fragment_photo_question.xml
@@ -2,8 +2,7 @@
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
-   android:weightSum="1"
-   android:background="@drawable/shapes" >
+   android:weightSum="1" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
