--- a/res/layout/fragment_result_question.xml
+++ b/res/layout/fragment_result_question.xml
@@ -19,7 +19,8 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.5"
-		            android:layout_marginTop="25dp"
+		            android:minHeight="50dp"
+		            android:layout_marginTop="15dp"
 		            android:layout_marginLeft="10dp"
 		            android:layout_marginRight="5dp"
 		            android:background="@drawable/button_selector"
@@ -31,7 +32,8 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.5"
-		            android:layout_marginTop="25dp"
+		            android:minHeight="50dp"
+		            android:layout_marginTop="15dp"
 		            android:layout_marginLeft="5dp"
 		            android:layout_marginRight="10dp"
 		             android:background="@drawable/button_selector"
@@ -47,6 +49,7 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.5"
+		            android:minHeight="50dp"
 		            android:layout_marginTop="20dp"
 		            android:layout_marginLeft="10dp"
 		            android:layout_marginRight="5dp"
@@ -59,6 +62,7 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.5"
+		            android:minHeight="50dp"
 		            android:layout_marginTop="20dp"
 		            android:layout_marginLeft="5dp"
 		            android:layout_marginRight="10dp"
