--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme for API 11+. This theme completely replaces
@@ -6,6 +6,15 @@
     -->
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- API 11 theme customizations can go here. -->
+    </style>
+    
+    <style name="thin_ab" parent="android:Theme.Holo.Light">
+        <item name="android:actionBarStyle" >@style/thin_ab_style</item>
+    </style>
+
+    <style name="thin_ab_style" parent="android:Widget.Holo.ActionBar">
+        <item name="android:height">30dp</item>
+        <item name="android:background">#33B5E5</item>
     </style>
 
 </resources>
